<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <!-- Background Image -->

    <!-- Profile Picture -->
    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bg_profile"
        android:contentDescription="@string/background_image_of_profile_page"/>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="82dp"
        android:layout_height="84dp"
        android:alpha="0.7"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081"
        app:srcCompat="@drawable/profile"
        android:contentDescription="@string/profile_picture" />

    <!-- Name TextView -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imasha_williams"
        android:textSize="20sp"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.638"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <!-- Email TextView -->
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marinawilli18_gmail_com"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.674"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <FrameLayout
        android:layout_width="345dp"
        android:layout_height="487dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.704">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.4"
            android:background="@drawable/rounded_border" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/cardview_light_background"
            android:textSize="18sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="80dp"
            android:text="@string/imasha_williams"
            android:textColor="@color/cardview_light_background"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textColor="@color/cardview_light_background"
            android:textSize="18sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="130dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textColor="@color/cardview_light_background"
            android:textSize="18sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="200dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timezone"
            android:textColor="@color/cardview_light_background"
            android:textSize="18sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="270dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marinawilli18_gmail_com"
            android:layout_marginStart="40dp"
            android:layout_marginTop="160dp"
            android:textColor="@color/cardview_light_background"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sri_lanka"
            android:layout_marginStart="40dp"
            android:layout_marginTop="230dp"
            android:textColor="@color/cardview_light_background"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asia_colombo"
            android:layout_marginStart="40dp"
            android:layout_marginTop="300dp"
            android:textColor="@color/cardview_light_background"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="318dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="350dp"
            android:backgroundTint="#7B5A42"
            android:textSize="16sp"
            android:text="@string/edit_profile" />

        <Button
            android:id="@+id/button6"
            android:layout_width="318dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="400dp"
            android:backgroundTint="#7B5A42"
            android:text="Go Back"
            android:textSize="16sp" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
